--- a/InventorySupplySystem/InventorySupplySystem/src/Views/PartScreen.fxml
+++ b/InventorySupplySystem/InventorySupplySystem/src/Views/PartScreen.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="451.0" prefWidth="442.0" styleClass="root" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PartScreenController">
+<AnchorPane id="AnchorPane" prefHeight="446.0" prefWidth="442.0" style="-fx-background-color: salmon;" styleClass="root" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PartScreenController">
    <children>
-      <HBox layoutX="203.0" layoutY="70.0" prefHeight="25.0" prefWidth="213.0">
+      <HBox layoutX="98.0" layoutY="70.0" prefHeight="25.0" prefWidth="213.0">
          <children>
             <RadioButton fx:id="InHouse" maxHeight="-Infinity" minHeight="-Infinity" minWidth="85.0" mnemonicParsing="false" onAction="#partType" text="InHouse">
                <toggleGroup>
@@ -28,7 +28,7 @@
             </RadioButton>
          </children>
       </HBox>
-      <GridPane layoutX="97.0" layoutY="104.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="279.0">
+      <GridPane layoutX="92.0" layoutY="99.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="279.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="116.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="182.0" minWidth="10.0" prefWidth="163.0" />
@@ -74,7 +74,7 @@
             <Font name="SimSun-ExtB" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="259.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#savePart" text="Save" textAlignment="CENTER">
+      <Button layoutX="254.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#savePart" text="Save" textAlignment="CENTER">
          <padding>
             <Insets bottom="4.0" left="10.0" right="10.0" top="4.0" />
          </padding>
@@ -82,7 +82,7 @@
             <Font name="SimSun-ExtB" size="15.0" />
          </font>
       </Button>
-      <Button layoutX="328.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#cancelPart" text="Cancel">
+      <Button layoutX="323.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#cancelPart" text="Cancel">
          <font>
             <Font name="SimSun-ExtB" size="15.0" />
          </font></Button>
