--- a/InventorySupplySystem/InventorySupplySystem/src/Views/ProductScreen.fxml
+++ b/InventorySupplySystem/InventorySupplySystem/src/Views/ProductScreen.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="793.0" styleClass="root" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductScreenController">
+<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="793.0" style="-fx-background-color: salmon;" styleClass="root" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductScreenController">
    <children>
       <GridPane layoutX="37.0" layoutY="120.0" prefHeight="180.0" prefWidth="276.0">
          <columnConstraints>
